cmake_minimum_required(VERSION 3.0.0)
project(pong VERSION 0.2.0 LANGUAGES C)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
add_executable(pong glad.c util.c renderer.c game.c main.c)
find_package(glfw3 REQUIRED)
target_link_libraries(pong PRIVATE m glfw ${CMAKE_DL_LIBS} ${OPENGL_LIBRARIES})
target_include_directories(pong PRIVATE ${CMAKE_SOURCE_DIR})
